src/test/ui/async-await/issues/issue-65159.stderr
error[E0107]: wrong number of type arguments: expected 2, found 1
  --> $DIR/issue-65159.rs:5:20
   |
LL | async fn copy() -> Result<()>
   |                    ^^^^^^^^^^ expected 2 type arguments

error[E0282]: type annotations needed
  --> $DIR/issue-65159.rs:7:5
   |
LL |     Ok(())
   |     ^^ cannot infer type for type parameter `E` declared on the enum `Result`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0107, E0282.
For more information about an error, try `rustc --explain E0107`.
